# game_of_life_cpp

./: .clangd  CMakeLists.txt  Makefile  life.cpp  life.h  main.cpp  naive.cpp  naive.h  neighbour_refs.cpp  neighbour_refs.h  neighbour_refs_par.cpp  neighbour_refs_par.h  test_main.cpp
